<resources>
    <string name="app_name">TodayPrice</string>
    <string name="search">검색</string>
    <string name="favorite">즐겨찾기</string>
    <string name="home">홈</string>
    <string name="home_market">서울 전통시장</string>


    <string name="no_price">알수없음</string>
    <string name="price_format_won">%s원</string>

    <string name="drawer_state_open">사이드바 확장</string>
    <string name="drawer_state_closed">사이드바 숨김</string>
    <string name="price_graph">가격 변동표</string>
    <string name="market_empty_description">시장에 대한 소개글이 없습니다.</string>

    <string name="market_prices_button">생필품 목록</string>

    <string name="kakao_label">카카오로 시작하기</string>
    <string name="google_label">Google로 시작하기</string>

    <string name="cancel">취소</string>
    <string name="go_login">로그인</string>
    <string name="dialog_login_message">댓글 작성을 위해서 로그인이 필요합니다.</string>


    <string name="login_title">전통 시장.</string>
    <string name="login_subtitle">오랜 기간에 걸쳐 일정한 지역에서 자연 발생적으로 \n형성된 상설 시장이나 정기 시장.</string>
    <string name="policy">개인정보처리방침</string>
    <string name="use_policy">이용약관</string>

    <string name="edit_hint_anonymous">로그인 후 댓글 작성이 가능합니다.</string>
    <string name="edit_hint_user">후기를 공유해주세요.</string>

    <!--    description-->
    <string name="activity_container">액티비티 컨테이너</string>


    <string name="format_money">%1$s원</string>
    <string name="no_stock">미입고</string>

    <string name="welcome_user">%s님 반갑습니다.</string>
    <string name="price_info">업데이트 날짜 %s\n가격은 변동이 있을 수 있습니다.</string>

    <string name="see_more">더보기</string>

    <string name="no_list">목록이 없습니다.</string>
    <string name="no_search">검색 결과가 없습니다.</string>
    <string name="no_review">등록된 후기가 없습니다.</string>
    <string name="search_result">검색 결과</string>
    <string name="search_hint">검색어를 입력하세요.</string>
    <string name="main_search_hint">시장 이름을 입력하세요.</string>
    <string name="review_menu_description">신고창 메뉴</string>

    <string name="login_fail_info_title_dialog">로그인 실패</string>
    <string name="login_fail_info_message_dialog">로그인에 실패하였습니다.</string>

    <string name="ok">확인</string>
    <string name="require_login">로그인이 필요합니다.</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="profile">프로필</string>
    <string name="user_is_blocked">해당 사용자는 차단되었습니다.</string>

    <string name="report">신고하기</string>
    <string name="block">차단하기</string>
    <string name="unblock">차단 해제하기</string>
    <string name="button_block">차단</string>
    <string name="button_unblock">차단 해제</string>
    <string name="button_delete">삭제</string>
    <string name="delete_text">댓글을 삭제하시겠습니까?</string>
    <string name="block_text">%1$s님의 댓글을 차단하시겠습니까?</string>
    <string name="unblock_text">%1$s님의 댓글을 차단 해제하시겠습니까?</string>

    <string name="review_delete_complete">댓글이 삭제되었습니다.</string>
    <string name="retry">다시 한번 시도해주세요.</string>

    <string name="report_gender">성적인 수치심</string>
    <string name="report_violent">폭력적 또는 혐오 표현</string>
    <string name="report_harmful">유해한 표현</string>
    <string name="report_spam">스팸 또는 혼동을 야기</string>
    <string name="report_abuse">학대 표현</string>
    <string name="report_etc">기타</string>
    <string name="report_etc_hint">기타 의견을 입력해주세요.</string>
    <string name="report_submit">신고 등록하기</string>

    <string name="report_dialog_title">접수 완료</string>
    <string name="report_dialog_message">신고 접수가 완료되었습니다.</string>
    <string name="report_dialog_button">뒤로 가기</string>
    <string name="report_error_toast">신고 접수가 완료되지 못했습니다. 다시 시도해주십시오.</string>

    <string name="notice">공지사항</string>
    <string name="inquiry">문의하기</string>
    <string name="my_review">내가 작성한 후기</string>
    <string name="my_inquiry_list">내 문의 내역</string>
    <string name="my_favorite_market">내 즐겨찾기</string>
    <string name="my_profile">내 프로필</string>
    <string name="edit">수정</string>

    <string name="edit_name_hint">닉네임 입력</string>
    <string name="edit_name">변경하기</string>
    <string name="edit_name_info_2">닉네임은 10자 미만이어야 합니다. 또한 이모티콘 및 특수문자를 입력할 수 없습니다.</string>
    <string name="edit_name_info_1">닉네임은 앱 내에서 리뷰나 기타 콘텐츠를 게시할 경우에 표시됩니다.</string>

    <string name="delete_account_info_1">계정 삭제 시 복구가 되지않습니다.\n\n 삭제 항목\n  - 계정 정보\n  - 즐겨찾기\n  - 문의사항</string>
    <string name="delete_account_info_2">계정 삭제를 원하시면 아래 버튼을 눌러주십시오.</string>

    <string name="delete_account">계정 삭제</string>
    <string name="inquiry_title">문의 제목</string>
    <string name="inquiry_type">문의 종류</string>
    <string name="inquiry_content">문의 내용</string>
    <string name="inquiry_answer">문의 답변</string>
    <string name="inquiry_content_hint">문의 내용을 입력하세요.</string>
    <string name="inquiry_title_hint">문의 제목을 입력하세요.</string>
    <string name="inquiry_info_user">문의하기는 로그인이 필요합니다.</string>
    <string name="no_inquiry">문의하신 내역이 없습니다.</string>
    <string name="inquiry_info_submit_success">문의가 정상적으로 등록되었습니다.\n문의 내역은 [메뉴>내 문의 내역]에서 확인해주세요.</string>
    <string name="inquiry_info_submit_fail">문의 등록이 실패했습니다. 다시 시도해주세요.</string>
    <string name="inquiry_info_delete">"문의를 삭제하시겠습니까?\n삭제하신 문의는 복구되지 않습니다.</string>

    <string name="inquiry_dialog_delete_complete">삭제가 완료되었습니다.</string>
    <string name="inquiry_dialog_delete_incomplete">삭제가 완료되지 않았습니다. 다시 한번 시도해주세요.</string>

    <string name="favorite_remove_dialog_message">즐겨찾기를 해제하시겠습니까?</string>
    <string name="complete_edit_nickname">닉네임이 변경되었습니다.</string>
    <string name="incomplete_edit_nickname">에러가 발생했습니다.
다시 시도해주세요.</string>

    <string name="complete_answer">답변 완료</string>
    <string name="incomplete_answer">답변 미완료</string>
    <string name="incomplete_answer_text">답변을 준비 중입니다.</string>

    <!--    category 별 글-->
    <string name="all">전체</string>
    <string name="grain">곡류</string>
    <string name="fruits">과일</string>
    <string name="seaFood">해산물</string>
    <string name="meatEggs">육류 및 계란</string>
    <string name="vegetables">채소</string>
    <string name="seasonings">양념 및 조미료</string>
    <string name="processedFoods">가공식품</string>
    <string name="dairyProducts">유제품</string>
    <string name="beverages">음료</string>
    <string name="householdItems">생활용품</string>
    <string name="undefined">기타</string>
</resources>