<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/profile_group" android:checkableBehavior="single">

        <item
            android:id="@+id/action_my_profile"
            android:paddingHorizontal="0dp"
            android:gravity="end"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/action_my_favorite"
            android:paddingHorizontal="0dp"
            android:gravity="end"
            android:title="@string/my_favorite_market" />

        <item
            android:id="@+id/action_my_review"
            android:paddingHorizontal="0dp"
            android:gravity="end"
            android:title="@string/my_review" />

        <item
            android:id="@+id/action_my_inquiry_list"
            android:paddingHorizontal="0dp"
            android:gravity="end"
            android:title="@string/my_inquiry_list" />
    </group>

    <group android:id="@+id/settings_group" android:checkableBehavior="single">

        <item
            android:id="@+id/action_notice"
            android:paddingHorizontal="0dp"
            android:gravity="end"
            android:title="@string/notice" />

        <item
            android:id="@+id/action_inquiry"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:gravity="end"
            android:title="@string/inquiry" />

    </group>

    <group android:id="@+id/category_login" android:checkableBehavior="single">
        <item
            android:id="@+id/action_logout"
            android:paddingHorizontal="0dp"
            android:gravity="end"
            android:title="@string/logout" />
    </group>
</menu>