<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        android:layout_height="0dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_gender"
                android:layoutDirection="rtl"
                android:paddingStart="0dp"
                android:paddingEnd="10dp" />

            <RadioButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_violent"
                android:layoutDirection="rtl"
                android:paddingStart="0dp"
                android:paddingEnd="10dp" />

            <RadioButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_harmful"
                android:layoutDirection="rtl"
                android:paddingStart="0dp"
                android:paddingEnd="10dp" />

            <RadioButton
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_spam"
                android:layoutDirection="rtl"
                android:paddingStart="0dp"
                android:paddingEnd="10dp" />

            <RadioButton
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_abuse"
                android:layoutDirection="rtl"
                android:paddingStart="0dp"
                android:paddingEnd="10dp" />

            <RadioButton
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_etc"
                android:layoutDirection="rtl"
                android:paddingStart="0dp"
                android:paddingEnd="10dp" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/addEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_image"
            android:textSize="@dimen/x_small_text_size"
            android:hint="@string/report_etc_hint"
            android:minHeight="50dp"
            android:paddingEnd="5dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/report_submit"
        android:background="@color/background_button"
        android:gravity="center"
        android:textColor="@color/hint"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>