<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/horizontal_padding"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inquiry_type"
        android:textColor="@color/hint" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:background="@drawable/bg_spinner"
        android:layout_marginTop="10dp"
        android:popupBackground="@drawable/bg_fill_button"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inquiry_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/hint" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit"
        android:hint="@string/inquiry_content_hint"
        android:textColorHint="@color/hint"
        android:gravity="top"
        android:textSize="@dimen/medium_text_size"
        android:padding="@dimen/horizontal_padding"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:importantForAutofill="no"
        android:inputType="textLongMessage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/CustomButton"
        android:text="@string/inquiry" />

</LinearLayout>