<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/horizontal_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:textStyle="bold"
        android:textColor="@color/highlight"
        android:textSize="@dimen/x_large_text_size" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:textColor="@color/hint"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/x_small_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/hint"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawableStart="@drawable/ic_google"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/google_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kakaoSignInButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawableStart="@drawable/ic_kakao"
        android:backgroundTint="@color/kakao_container"
        android:textColor="@color/kakao_label"
        app:layout_constraintTop_toBottomOf="@id/googleSignInButton"
        android:text="@string/kakao_label" />

    <TextView
        android:id="@+id/policyTextView"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/policy"
        android:textColor="@color/hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>