<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:elevation="10dp">

    <TextView
        android:id="@+id/reportTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/report"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/blockTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/block"
        android:gravity="center" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:textStyle="bold"
        android:gravity="center" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        app:dividerColor="@color/hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/leftButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background"
            android:layout_marginVertical="10dp"
            android:textColor="@color/hint"
            android:text="@string/cancel"
            android:textSize="@dimen/large_text_size"
            android:gravity="center" />

        <TextView
            android:id="@+id/rightButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/highlight"
            android:textColor="@color/hint"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:textSize="@dimen/large_text_size" />


    </LinearLayout>

</LinearLayout>